olap.result, olap.test:   Added a test for bug #8615. sql_select.cc:   Fixed bug #8615.   This fix only removed the cause of the reported crash.   It does not resolve other problems of rollup queries   with DISTINCT. They were fixed in the previous patch   for bug 8616.